2013-01-14  Daniel Willmann

	* edje: Fix off-by-one errors when using alloca in various functions

2013-01-14  Tom Hacohen (TAsn)

	* Evas textblock: Fixed issue with line height when breaking on a
	format.

2013-01-14  Cedric Bail

	* Fix bug in eio_file_map_new container set.

2013-01-14  Albin Tonerre

	* Fix endianess issue in Eet_Image.

2013-01-13  Boris Faure (billiob)

	* Fixed condition based on uninitialized value in ecore_x_selection
	(both xlib and xcb).
	* Fixed a leaked when no selection converter matches.

2013-01-11  Tom Hacohen (TAsn)

	* Static libs: Updated liblinebreak to libunibreak's latest version.
	* Evas texblock: Fixed a bug with breaking after format items.

2013-01-11  Cedric Bail

	* Fix not up to date clip cache for Evas_Object_Text.

2013-01-09  Jiyoun Park (jypark)

	* Fix evas bmp loader code which deal with image size.

2013-01-08  Gustavo Sverzut Barbieri (k-s)

	* Fix eina_prefix_new() with debian multilib without magic check file.

2013-01-08  Mike Blumenkrantz

        * Fix efreet desktop command parsing of https

2013-01-07  Sung W. Park (sung_)

	* Pulled out evas gl backend binary shader file caching code from 
        evas_gl_shader.c file and made an internal generic caching api in 
        evas_gl_common.h for use in evas_gl code.
        * Implemented evas_gl surface cap. caching code in gl backend to
        accelerate the engine creation. 


2013-01-07  Thomas Petazzoni

	* Fix build of Evas XCB backend.

2013-01-04  Jérémy Zurcher

	* Improve eina_share string del speed by a maybe 5-15%.

2013-01-03  Gustavo Sverzut Barbieri (k-s)

	* Add eina_alloc.h to Eina.h to define alloca()
	* Eeze: deprecated support for udev<148 and libmount<2.18

2013-01-03  Cedric Bail

	* Use Eina_File for evas png loader.

2013-01-03  Carsten Haitzler (The Rasterman)

        * Fixed ecore_con case where freeing server double-frees clients

2013-01-03  Jérémy Zurcher

	* Add eio_eet_sync symbols.
